<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_timer"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="58sp"
        android:layout_marginTop="169dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop"
        android:id="@+id/btn_stop"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_minutes"
        android:id="@+id/btn_time_2mins"
        android:layout_above="@+id/btn_stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_minutes"
        android:id="@+id/btn_time_3mins"
        android:layout_above="@+id/btn_stop"
        android:layout_toRightOf="@+id/btn_time_2mins"
        android:layout_toEndOf="@+id/btn_time_2mins" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_minutes"
        android:id="@+id/btn_time_5mins"
        android:layout_alignTop="@+id/btn_time_3mins"
        android:layout_toRightOf="@+id/btn_time_3mins"
        android:layout_toEndOf="@+id/btn_time_3mins" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven_minutes"
        android:id="@+id/btn_time_7mins"
        android:layout_alignTop="@+id/btn_time_5mins"
        android:layout_toRightOf="@+id/btn_time_5mins"
        android:layout_toEndOf="@+id/btn_time_5mins" />
</RelativeLayout>
